--- a/tasks/rhosts.yml
+++ b/tasks/rhosts.yml
@@ -20,4 +20,9 @@
   file:
     dest: '~{{ item }}/.netrc'
     state: 'absent'
+
+- name: dlete .forward-files from system | os-09
+  files:
+    dest: '~{{ item }}/.forward'
+    state: 'absent'
   with_flattened: '{{ users.stdout_lines | default([]) }}'
