--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,14 +1,14 @@
 os_desktop_enable: false
 os_env_extra_user_paths: []
-os_auth_pw_max_age: 60
+os_auth_pw_max_age: 90
 os_auth_pw_min_age: 7 # discourage password cycling
 os_auth_retries: 5
 os_auth_lockout_time: 600 # 10min
 os_auth_timeout: 60
 os_auth_allow_homeless: false
 os_auth_pam_passwdqc_enable: true
-os_auth_pam_passwdqc_options: 'min=disabled,disabled,16,12,8' # used in RHEL6
-os_auth_pam_pwquality_options: 'try_first_pass retry=3 type=' # used in RHEL7
+#os_auth_pam_passwdqc_options: 'min=disabled,disabled,16,12,8' # used in RHEL6
+#os_auth_pam_pwquality_options: 'try_first_pass retry=3 type=' # used in RHEL7
 os_auth_root_ttys: [console, tty1, tty2, tty3, tty4, tty5, tty6]
 
 os_chfn_restrict: ''
@@ -27,7 +27,7 @@ os_security_suid_sgid_remove_from_unknown: false
 
 # remove packages with known issues
 os_security_packages_clean: true
-os_security_packages_list: ['xinetd', 'inetd', 'ypserv', 'telnet-server', 'rsh-server', 'prelink']
+os_security_packages_list: ['xinetd', 'inetd', 'telnet-server', 'rsh-server', 'prelink', 'nis', 'tftp-server', 'chargen', 'daytime', 'echo', 'discard',]
 
 # Allow interactive startup (rhel, centos)
 os_security_init_prompt: true
