--- a/tasks/pam.yml
+++ b/tasks/pam.yml
@@ -1,10 +1,10 @@
 ---
-- name: update pam on Debian systems
-  command: 'pam-auth-update --package'
-  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
-  changed_when: False
-  environment:
-    DEBIAN_FRONTEND: noninteractive
+#- name: update pam on Debian systems
+ # command: 'pam-auth-update --package'
+ # when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+ # changed_when: False
+ # environment:
+  #  DEBIAN_FRONTEND: noninteractive
 
 # the reason for this is so a user cannot connect to a server,
 # that isn't connected to an LDAP server anymore.
