--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,11 @@ os_auth_pam_passwdqc_enable: true
 os_auth_pam_passwdqc_options: 'min=disabled,disabled,16,12,8' # used in RHEL6
 os_auth_pam_pwquality_options: 'try_first_pass retry=3 type=' # used in RHEL7
 os_auth_root_ttys: [console, tty1, tty2, tty3, tty4, tty5, tty6]
+#os_sshd_rsa_auth: yes
+#os_host_based_auth: no
+#os_sshd_max_auth_tries: 4
+#os_sshd_client_alive_interval: 300
+#os_sshd_client_alive_count_max: 0
 
 os_chfn_restrict: ''
 # may contain: change_user
