--- a/tests/test.yml
+++ b/tests/test.yml
@@ -30,6 +30,11 @@
     os_security_suid_sgid_blacklist: ['/bin/umount']
     os_security_suid_sgid_whitelist: ['/usr/bin/rlogin']
     os_filesystem_whitelist: []
+#    os_sshd_rsa_auth: yes
+ #   os_host_based_auth: no
+  #  os_sshd_max_auth_tries: 4
+   # os_sshd_client_alive_interval: 300
+  #  os_sshd_client_alive_count_max: 0
     sysctl_config:
       net.ipv4.ip_forward: 0
      # net.ipv6.conf.all.forwarding: 0
