--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,6 +1,6 @@
 ---
 - name: wrapper playbook for kitchen testing "ansible-os-hardening" with custom vars for testing
-  hosts: ansible-multi-node-2
+  hosts: ansible-multi-node-1
   become: yes
   become_method: sudo
   roles:
@@ -10,15 +10,15 @@
       apt:
         update_cache: yes
       when: ansible_os_family == 'Ubuntu'
-   # - name: install required tools on fedora
-   #  dnf:
-   #     name:
-   #       - python
-   #       - findutils
-   #       - procps-ng
-   #   when: ansible_distribution == 'Fedora'
-   # - name: create recursing symlink to test minimize access
-   #   shell: "rm -f /usr/bin/zzz && ln -s /usr/bin /usr/bin/zzz"
+  #  - name: install required tools on fedora
+   #   dnf:
+    #    name:
+     #     - python
+      #    - findutils
+       #   - procps-ng
+     # when: ansible_distribution == 'Fedora'
+    - name: create recursing symlink to test minimize access
+      shell: "rm -f /usr/bin/zzz && ln -s /usr/bin /usr/bin/zzz"
   vars:   #7.1 & 7.2
     os_security_users_allow: change_user
     os_security_kernel_enable_core_dump: true
@@ -77,14 +77,14 @@
       fs.suid_dumpable: 0   #4.1
       kernel.randomize_va_space: 2  #4.3
 
-- name: wrapper playbook for kitchen testing "ansible-os-hardening"
-  hosts: ansible-multi-node-1
-  vars:
-    - os_auditd_enabled: false
-  pre_tasks:
-    - name: Run the equivalent of "apt-get update" as a separate step
-      apt:
-       update_cache: yes
-      when: ansible_os_family == 'Ubuntu'
-  roles:
-    - ansible-os-hardening
+#- name: wrapper playbook for kitchen testing "ansible-os-hardening"
+ # hosts: ansible-multi-node-1
+ # vars:
+  #  - os_auditd_enabled: false
+ # pre_tasks:
+   # - name: Run the equivalent of "apt-get update" as a separate step
+    #  apt:
+     #  update_cache: yes
+     # when: ansible_os_family == 'Ubuntu'
+ # roles:
+  #  - ansible-os-hardening
