--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -34,8 +34,14 @@ os_security_suid_sgid_remove_from_unknown: false
 
 # remove packages with known issues
 os_security_packages_clean: true
-#os_security_packages_list: ['xinetd', 'time', 'telnet-server', 'rsh-server', 'prelink', 'nis', 'talk-server', 'tftp-server', 'chargen', 'daytime', 'echo', 'discard']
+os_security_packages_list: ['xinetd', 'time', 'telnet-server', 'telnet', 'rsh-server', 'rsh-client', 'prelink', 'nis', 'talk-server', 'tftp-server', 'chargen', 'daytime', 'echo', 'discard']
 
+# Remove packages with special usage. TODO: Check whether they are needed before executing on each batch of servers.
+special_purpose_package: ['xserver-xorg-core', 'avahi-daemon', 'isc-dhcp-server', 'isc-dhcp-server6', 'slapd', 'bind9', 'vsftpd', 'dovecot', 'smdb', 'snmpd', 'biosdevname', 'nfs-kernel-server', 'nfs-common', 'portmap', 'nfs-utils', 'rsync']
+special_http_packages: ['httpd', 'nginx', 'squid']
+
+#item.path: "/var/log*"
+#files_to_set_permission: ['boot.log*', 'cron', 'maillog*', 'secure*', 'spooler*', 'btmp*', 'faillog*', 'syslog*', 'auth.log*']
 # Allow interactive startup (rhel, centos)
 os_security_init_prompt: true
 # Require root password for single user mode. (rhel, centos)
