--- a/tasks/auditd.yml
+++ b/tasks/auditd.yml
@@ -12,3 +12,11 @@
     owner: 'root'
     group: 'root'
     mode: '0640'
+
+- name: configure audit.rules
+  template:
+    src: 'etc/audit/audit.rules.j2'
+    dest: '/etc/audit/audit.rules'
+    owner: root
+    group: root
+    mode: 640
