--- a/tasks/hardening.yml
+++ b/tasks/hardening.yml
@@ -28,9 +28,9 @@
   tags: minimize_access
   ignore_errors: yes
 
-- import_tasks: pam.yml
-  tags: pam
-  ignore_errors: yes
+#- import_tasks: pam.yml
+ # tags: pam
+#  ignore_errors: yes
 
 - import_tasks: modprobe.yml
   tags: modprobe
@@ -46,6 +46,18 @@
 
 - import_tasks: rm_spl_purp_packages.yml
   tags: rm_spl
+
+- import_tasks: postfix.yml
+  tags: postfix
+
+- import_tasks: disable_nw_protocols.yml
+  tags: dis_nw_proto
+
+- import_tasks: disable_wifi.yml
+  tags: dis_wifi
+
+- import_tasks: syslog-ng.yml
+  tags: syslog
 
 #- import_tasks: apparmor.yml
  # tags: armor
@@ -75,6 +87,9 @@
 
 - import_tasks: rhosts.yml
   tags: rhosts
+
+- import_tasks: tasks/user_home_permissions.yml
+  tags: user_home_permission
 
 - import_tasks: yum.yml
   when: ansible_os_family == 'RedHat'
