--- a/tasks/user_home_permissions.yml
+++ b/tasks/user_home_permissions.yml
@@ -1,16 +1,6 @@
 ---
-- name: Get user accounts | os-09
-  command: "awk -F: '{print $1}' /etc/passwd"
-  changed_when: False
-  check_mode: False
-  register: users
-
 - name: Set home directory permissions
-  file: 
-    path: '~{{ item }}'
-    mode: '0750'
-  with_flattened: '{{ users.stdout_lines | default([]) }}'
+  shell: 'chmod 750 /home/*'
 
 - name: Set permissions to dot (hidden) files
-  shell: 'chmod 750 ~{{ item }}/.[!.]*'
-  with_flattened: '{{ users.stdout_lines | default([]) }}'
+  shell: 'chmod 750 /home/*/.[!.]*'
