--- a/tasks/hardening.yml
+++ b/tasks/hardening.yml
@@ -16,6 +16,7 @@
 - import_tasks: auditd.yml
   tags: auditd
   when: os_auditd_enabled
+  ignore_errors: yes
 
 - import_tasks: limits2.yml
   tags: limits
@@ -43,9 +44,11 @@
 
 - import_tasks: file_permission.yml
   tags: file
+  ignore_errors: yes
 
 - import_tasks: rm_spl_purp_packages.yml
   tags: rm_spl
+  ignore_errors: yes
 
 - import_tasks: postfix.yml
   tags: postfix
@@ -55,10 +58,11 @@
 
 - import_tasks: disable_wifi.yml
   tags: dis_wifi
+  ignore_errors: yes
 
-- import_tasks: syslog-ng.yml
-  tags: syslog
-
+#- import_tasks: syslog-ng.yml
+#  tags: syslog
+ # ignore_errors: yes
 #- import_tasks: apparmor.yml
  # tags: armor
 
@@ -77,6 +81,7 @@
 - import_tasks: suid_sgid.yml
   when: os_security_suid_sgid_enforce
   tags: suid_sgid
+  ignore_errors: yes
 
 - import_tasks: sysctl.yml
   tags: sysctl
@@ -88,8 +93,9 @@
 - import_tasks: rhosts.yml
   tags: rhosts
 
-- import_tasks: tasks/user_home_permissions.yml
+- import_tasks: user_home_permissions.yml
   tags: user_home_permission
+  ignore_errors: yes
 
 - import_tasks: yum.yml
   when: ansible_os_family == 'RedHat'
@@ -99,3 +105,4 @@
 - import_tasks: apt.yml
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
   tags: apt
+  ignore_errors: yes
