--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,8 +8,10 @@
 # finds first
 
 [defaults]
+deprecation_warnings=False
+command_warnings=False
 ansible_managed = Ansible managed: {file} modified by {uid} on {host}
-# additional paths to search for roles in, colon separated
+ additional paths to search for roles in, colon separated
 roles_path    = ../
 
 [ssh_connection]
